# NewsIntel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  checklist.md  docker-compose.yml  findings.md  progress.md  spec.md  task_plan.md  tasks.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260306_0001_initial.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: bootstrap.py  config.py  database.py  deps.py  security.py
backend/app/ingestion/: __init__.py  news_skills.py
backend/app/models/: __init__.py  article.py  base.py  stock.py  user.py
backend/app/providers/: __init__.py
backend/app/providers/stocks/: __init__.py  base.py  (+1 more)
backend/app/schemas/: alerts.py  analysis.py  auth.py  common.py  news.py  stocks.py  user.py  watchlist.py
backend/app/services/: alert_service.py  analysis_service.py  auth_service.py  news_service.py  news_stream_bus.py  price_stream_bus.py  stock_price_sync.py  stock_price_sync_state.py  stock_service.py  watchlist_service.py
backend/scripts/: __init__.py  fetch_stock_prices.py  ingest_news.py
backend/tests/: conftest.py  test_api_alerts.py  test_api_analysis_market.py  test_api_analysis_overview.py  test_api_auth.py  test_api_news.py  test_api_stock_sync_status.py  test_api_stocks.py  test_api_stream.py  test_api_watchlist.py  test_api_ws.py  test_health.py  test_migrations_sqlite.py  test_models_metadata.py  test_script_fetch_stock_prices.py  test_script_ingest_news.py  test_services_news_service.py  test_stock_price_sync_service.py
(+99 files in other folders)
